openshift-gitea/gitea.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
        - name: gitea
          image: docker.io/gitea/gitea:1.26-rootless
          ports:
            - name: http
              containerPort: 3000
            - name: ssh
              containerPort: 22
          volumeMounts:
            - name: config
              mountPath: /etc/gitea/app.ini
              subPath: app.ini
            - name: data
              mountPath: /data
      volumes:
        - name: config
          configMap:
            name: gitea-app-ini
        - name: data
          persistentVolumeClaim:
            claimName: gitea-data
---
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea
spec:
  selector:
    app: gitea
  ports:
    - name: http
      port: 3000
      targetPort: 3000
    - name: ssh
      port: 22
      targetPort: 22
