openshift-gitea/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitea
  namespace: gitea
spec:
  host: gitea.example.com
  to:
    kind: Service
    name: gitea
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
